// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 2,
        "paddingBottom": 4,
        "paddingTop": 4,
      },
      {
        "backgroundColor": "#FFFCFA",
        "borderColor": "#FCCCB6",
        "paddingHorizontal": 6,
      },
    ]
  }
>
  <View
    style={
      {
        "height": 6,
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#2B1911",
          },
          [
            [
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 10,
                "letterSpacing": 0.14,
                "lineHeight": 22,
              },
              {
                "color": "#FCCCB6",
              },
            ],
            {
              "marginBottom": -40,
              "marginTop": -40,
            },
          ],
          false,
        ]
      }
    >
      fast trader
    </Text>
  </View>
  <test-file-stub
    fill="#FCCCB6"
    style={
      [
        {
          "height": 12,
          "width": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Badge should render correctly if badge is unlocked 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 2,
        "paddingBottom": 4,
        "paddingTop": 4,
      },
      {
        "backgroundColor": "#FFFCFA",
        "borderColor": "#F56522",
        "paddingHorizontal": 6,
      },
    ]
  }
>
  <View
    style={
      {
        "height": 6,
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#2B1911",
          },
          [
            [
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 10,
                "letterSpacing": 0.14,
                "lineHeight": 22,
              },
              {
                "color": "#F56522",
              },
            ],
            {
              "marginBottom": -40,
              "marginTop": -40,
            },
          ],
          false,
        ]
      }
    >
      fast trader
    </Text>
  </View>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 12,
          "width": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;
